# mdeck

./: .gitignore  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  LICENSE.md  README.md
.claude/skills/release/: SKILL.md
.github/workflows/: release.yml
crates/mdeck/: Cargo.toml
crates/mdeck/doc/: mdeck-spec.md
crates/mdeck/src/: app.rs  banner.rs  cli.rs  config.rs
crates/mdeck/src/commands/: ai.rs  completion.rs  config.rs  export.rs  mod.rs  spec.rs
crates/mdeck/src/parser/: frontmatter.rs  mod.rs
crates/mdeck/src/render/: image_cache.rs  mod.rs  syntax.rs  text.rs  transition.rs
crates/mdeck/src/render/layouts/: code.rs  quote.rs  two_column.rs
crates/presemd/: Cargo.toml
crates/presemd/src/: app.rs  banner.rs  cli.rs  config.rs  main.rs  theme.rs
crates/presemd/src/commands/: ai.rs  completion.rs  config.rs  export.rs  spec.rs
crates/presemd/src/parser/: blocks.rs  inline.rs  mod.rs  splitter.rs
crates/presemd/src/render/: mod.rs  text.rs  transition.rs
crates/presemd/src/render/layouts/: bullet.rs  content.rs  image_slide.rs  mod.rs  quote.rs  section.rs  title.rs
sample-presentations/: poker-night.md  saloon-workshop.md  test-layouts-light.md  test-layouts.md
