[workspace]
resolver = "2"
members = [
    "crates/presemd",
]

[workspace.package]
version = "0.2.0"
edition = "2024"
authors = ["Kristofer Liljeblad <kristofer@mklab.se>"]
license = "MIT"
repository = "https://github.com/mklab-se/presemd"
rust-version = "1.85"

[workspace.dependencies]
eframe = "0.33"

# CLI
clap = { version = "4.5", features = ["derive", "wrap_help"] }
clap_complete = { version = "4.5", features = ["unstable-dynamic"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9"

# Error handling
anyhow = "1.0"

# Terminal
colored = "2.1"
inquire = "0.7"

# Regex
regex = "1.11"

# Image loading
image = { version = "0.25", default-features = false, features = ["png", "jpeg", "webp"] }

# Syntax highlighting
syntect = { version = "5", default-features = false, features = ["default-syntaxes", "default-themes", "regex-onig"] }

# Directories
dirs = "6.0"
